# musl

./: .gitignore  CMakeLists.txt  CMakeLists.txt.dis  Makefile  build.sh
crt/: Scrt1.c  crt1.c  rcrt1.c
include/: byteswap.h  endian.h
ldso/: dynlink.c
src/fenv/: fenv.c
src/include/: features.h
src/internal/: dynlink.h
src/ldso/: dlsym.c  tlsdesc.c
src/legacy/: ftw.c
src/linux/: clone.c
src/locale/: dcngettext.c  iconv.c
src/malloc/: free.c  realloc.c
src/malloc/mallocng/: glue.h
src/math/: acosl.c  asinl.c  atan2l.c  atanl.c  ceill.c  exp2l.c  expl.c  expm1l.c  fabs.c  fabsf.c  fabsl.c  floorl.c  fma.c  fmaf.c  fmodl.c  llrint.c  llrintf.c  llrintl.c  log10l.c  log1pl.c  log2l.c  logl.c  lrint.c  lrintf.c  lrintl.c  remainderl.c  remquol.c  rintf.c  rintl.c  sqrt.c  sqrtf.c  sqrtl.c  truncl.c
src/misc/: syslog.c
src/multibyte/: c16rtomb.c
src/network/: setsockopt.c
src/prng/: __rand48_step.c
src/process/: fork.c  posix_spawn.c  vfork.c
src/select/: select.c
src/signal/: restore.c  setitimer.c
src/stdio/: sprintf.c  vfprintf.c  vfwprintf.c
src/stdlib/: fcvt.c
src/string/: memcpy.c  memmove.c  memset.c
src/thread/: __set_thread_area.c  __syscall_cp.c  __unmapself.c  clone.c  pthread_cancel.c
